--- a/myapp/rishabs/templates/rishabs/layout1.html
+++ b/myapp/rishabs/templates/rishabs/layout1.html
@@ -23,7 +23,7 @@
             <div class="photo1" >
                 <img src="{% static 'images/icon.png' %}">
             </div>
-            {% block body %}
+            {% block content %}
             {% endblock %}
         </div>
     </body>
