--- a/myapp/rishabs/templates/rishabs/home.html
+++ b/myapp/rishabs/templates/rishabs/home.html
@@ -1,5 +1,5 @@
 {% extends 'rishabs/layout1.html' %}
-{% block body %}
+{% block content %}
     <div>
         <h1>RISHAB'S APP</h1>
         <h3>ENJOY OUR SOFTWARE!</h3>
