--- a/myapp/rishabs/templates/rishabs/layout1.html
+++ b/myapp/rishabs/templates/rishabs/layout1.html
@@ -17,6 +17,7 @@
                         <li><a href="{% url 'index' %}">HOME</a></li>
                         <li><a href="{% url 'login_view' %}">LOGIN</a></li>
                         <li><a href="{% url 'register_view' %}">REGISTER</a></li>
+                        <li><a href="{% url 'verify' %}">VERIFY</a></li>
                     {% endif %}
                 </ul>
             </navbar>
