--- a/myapp/rishabs/templates/rishabs/shop.html
+++ b/myapp/rishabs/templates/rishabs/shop.html
@@ -1,6 +1,14 @@
 {% extends 'rishabs/layout1.html' %}
 {% block content %}
     <div>
-        <h1>RISHAB'S APP</h1>
+
+        <form action="{% url 'order' %}" method="GET">
+            {% csrf_token %}
+            <div>
+                <button class="button1" type="submit">PLACE ORDER!</button>
+            </div>
+        </form>
+
+
     </div>
 {% endblock %}
