--- a/myapp/myapp/rishabs/templates/rishabs/order.html
+++ b/myapp/myapp/rishabs/templates/rishabs/order.html
@@ -12,7 +12,7 @@
                     </div>
 
                     <div class="name">
-                        <h3>NAME</h1>
+                        <h3>{{ user.username }}</h1>
                     </div>
                     
                 </div>
