--- a/myapp/myapp/rishabs/static/css/new.css
+++ b/myapp/myapp/rishabs/static/css/new.css
@@ -104,6 +104,9 @@ background-color: #111;
     margin-right: 20px;
     display: flex;
     justify-content:space-evenly;
+    background-color: #d9d9d9;
+    box-shadow: 5px 5px 7px black;
+    margin-bottom: 12px;
 }
 
 
