--- a/myapp/myapp/rishabs/templates/rishabs/layout2.html
+++ b/myapp/myapp/rishabs/templates/rishabs/layout2.html
@@ -10,8 +10,8 @@
             <navbar class="navbar1">
                 <ul class="nav-comp">
                     {% if user.is_authenticated %}
-                        <li><a href="#">CART</a></li>
-                        <li><a href="#">PROFILE</a></li>
+                        <li><a href="{% url 'order' %}">MENU</a></li>
+                        <li><a href="{% url 'profile_view' %}">PROFILE</a></li>
                         <li><a href="{% url 'logout_view' %}">LOGOUT</a></li>
                     {% else %}
                         <li><a href="{% url 'index' %}">HOME</a></li>
