--- a/myapp/myapp/rishabs/templates/rishabs/shop.html
+++ b/myapp/myapp/rishabs/templates/rishabs/shop.html
@@ -1,6 +1,7 @@
 {% extends 'rishabs/layout1.html' %}
 {% block content %}
     <div>
+        <div><h2>WELCOME TO RISHABS</h2></div>
 
         <form action="{% url 'order' %}" method="GET">
             <div >
