--- a/myapp/myapp/rishabs/templates/rishabs/register.html
+++ b/myapp/myapp/rishabs/templates/rishabs/register.html
@@ -14,6 +14,7 @@
             <input type="password" class="name1" placeholder="Enter your password " name="password">
             <input type="password" class="name1" placeholder="Re-enter your password " name="cpassword">
             <input type="tel" class="name1" placeholder="Enter your number" name="phone_number">
+            <input type="email" class="name1" placeholder="Enter your mail" name="email">
 
             {% if message %}
                 <p class="error">{{ message }}</p>
