--- a/myapp/myapp/rishabs/templates/rishabs/order_confirmation.html
+++ b/myapp/myapp/rishabs/templates/rishabs/order_confirmation.html
@@ -5,7 +5,7 @@
         <div>
             <h1>Order Submitted!</h1>
             <p>You should receive a confirmation email soon.</p>
-            <a href="{% url 'order' %}">Go to the homepage</a>
+            <a href="{% url 'order' %}">Return to menu</a>
         </div>
     </div>
 
