--- a/myapp/myapp/rishabs/static/css/new.css
+++ b/myapp/myapp/rishabs/static/css/new.css
@@ -84,15 +84,16 @@ background-color: #111;
     background-color: #d9d9d9;
     width:100px;
     border-radius: 5px;
+    box-shadow: 5px 5px 7px black;
 }
 
 .head-name
 {
     text-align: left;
-    margin-top: 10px;
+    margin-top: 30px;
     margin-left: 20px;
     margin-right: 20px;
-    font-size: 1.5em;
+    font-size: 2em;
     border-bottom: 1px solid;
 }
 
@@ -103,10 +104,31 @@ background-color: #111;
     margin-left: 20px;
     margin-right: 20px;
     display: flex;
-    justify-content:space-evenly;
+    font-size: 1.2rem;
+    justify-content: space-between;
     background-color: #d9d9d9;
     box-shadow: 5px 5px 7px black;
     margin-bottom: 12px;
+    border-radius: 8px;
+}
+
+.i-name{
+    padding-left: 1rem;
+    width: 18rem;    
+}
+
+.i-check{
+    padding-right: 1rem;
+    align-self: center;
+}
+
+.i-check > input{
+    width: 2rem;
+    height: 1rem;
+}
+
+.i-price{
+    padding-right: 2rem;
 }
 
 
