--- a/myapp/rishabs/templates/rishabs/email_template.html
+++ b/myapp/rishabs/templates/rishabs/email_template.html
@@ -1,4 +1,4 @@
-Hey {{ user.username }}!
+Hey {{ username }}!
 
 Just wanted to thank you for your recent purchase!
 --------------------------------------------------
