--- a/myapp/restaurent/templates/restaurent/layout3.html
+++ b/myapp/restaurent/templates/restaurent/layout3.html
@@ -9,9 +9,9 @@
         <div class="main-body">
             <navbar class="navbar1">
                 <ul class="nav-comp">
-                        <li><a href="{% url 'order' %}">MENU</a></li>
-                        <li><a href="{% url 'profile_view' %}">PROFILE</a></li>
-                        <li><a href="{% url 'logout_view' %}">LOGOUT</a></li>
+                        <li><a href="#">MENU</a></li>
+                        <li><a href="#">PROFILE</a></li>
+                        <li><a href="#">LOGOUT</a></li>
                 </ul>
             </navbar>
             {% block content %}
