--- a/myapp/restaurent/templates/restaurent/profile.html
+++ b/myapp/restaurent/templates/restaurent/profile.html
@@ -1,4 +1,4 @@
-{% extends 'rishabs/layout1.html' %}
+{% extends 'restaurent/layout1.html' %}
 {% block content %}
     <div class="holder">
         <div class="holder-head">
@@ -33,8 +33,5 @@
             </div>
             
         </div>
-    </div>
-    <div>
-        <a href="{% url 'order' %}">MENU</a>
     </div>
 {% endblock %}
