--- a/myapp/rishabs/static/css/new.css
+++ b/myapp/rishabs/static/css/new.css
@@ -71,20 +71,22 @@ background-color: #111;
 
 .options{
     display: flex;
-    flex: 1fr 1fr 1fr 1fr;
-    gap:5px;
-    margin-top: 20px;
-    margin-bottom: 10px;
+    flex: 1fr 1fr 1fr;
+    gap:10px;
     justify-content: space-around;
-    padding-left:7px;
-    padding-right: 7px;
 }
 
 .option{
     background-color: #d9d9d9;
-    width:100px;
     border-radius: 5px;
+    padding: 2rem;
+    width: 10rem;
     box-shadow: 5px 5px 7px black;
+    transition: all 0.6s;
+}
+
+.option:hover{
+    background-color:#4f5b50;
 }
 
 .head-name
@@ -110,6 +112,12 @@ background-color: #111;
     box-shadow: 5px 5px 7px black;
     margin-bottom: 12px;
     border-radius: 8px;
+    transition: all 0.6s;
+}
+
+.items:hover{
+    background-color:#8d8d8d;
+    box-shadow: 5px 5px 7px rgb(97, 97, 97);
 }
 
 .i-name{
@@ -156,4 +164,3 @@ background-color: #111;
     background-color: black;
     color: black;
 }
-
