--- a/myapp/rishabs/templates/rishabs/layout2.html
+++ b/myapp/rishabs/templates/rishabs/layout2.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="{% static 'css/new.css' %}">
+        <meta name='viewport' content='width=device-width, initial-scale=1'>
         <title>Rishabs App</title>
     </head>
     <body>
