--- a/myapp/rishabs/static/css/new.css
+++ b/myapp/rishabs/static/css/new.css
@@ -164,3 +164,53 @@ background-color: #111;
     background-color: black;
     color: black;
 }
+
+.bill{
+    display: flex;
+    align-items: center;
+}
+
+.order-contain{
+    background-color: rgba(21, 78, 37, 0.19);
+    margin-top: 3rem;
+    width: 60%;
+    align-self: center;
+}
+
+.styled-table{
+    border-collapse: collapse;
+    margin: 25px 0;
+    font-size: 0.9em;
+    font-family: sans-serif;
+    width: 100%;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+.styled-table thead tr {
+    background-color: #009879;
+    color: #ffffff;
+    text-align: center;
+}
+
+.styled-table th,
+.styled-table td {
+    padding: 12px 15px;
+}
+
+.styled-table tbody tr {
+    border-bottom: 1px solid #dddddd;
+}
+
+.styled-table tbody tr:nth-of-type(even) {
+    background-color: #f3f3f3;
+}
+
+.styled-table tbody tr:last-of-type {
+    border-bottom: 2px solid #009879;
+}
+
+#order-total{
+    background-color: #009879;
+    color: #ffffff;
+    text-align: center;
+}
