--- a/myapp/rishabs/templates/rishabs/register.html
+++ b/myapp/rishabs/templates/rishabs/register.html
@@ -10,11 +10,11 @@
         <form action="{% url 'register_view' %}" method="POST">
             {% csrf_token %}
 
-            <input type="text" class="name1" placeholder="Enter your name " name="username">
-            <input type="password" class="name1" placeholder="Enter your password " name="password">
-            <input type="password" class="name1" placeholder="Re-enter your password " name="cpassword">
-            <input type="tel" class="name1" placeholder="Enter your number" name="phone_number">
-            <input type="email" class="name1" placeholder="Enter your mail" name="email">
+            <input type="text" class="name1" placeholder="Enter your name " name="username" required>
+            <input type="password" class="name1" placeholder="Enter your password " name="password" required>
+            <input type="password" class="name1" placeholder="Re-enter your password " name="cpassword" required>
+            <input type="tel" class="name1" placeholder="Enter your number" name="phone_number" required>
+            <input type="email" class="name1" placeholder="Enter your mail" name="email" required>
 
             {% if message %}
                 <p class="error">{{ message }}</p>
