--- a/myapp/rishabs/templates/rishabs/order.html
+++ b/myapp/rishabs/templates/rishabs/order.html
@@ -19,15 +19,24 @@
     
     
                 <div class="options">
-                    <div class="option">
-                        <a class="option_a" href="#juices"><h3>Juices</h3></a>
-                    </div>
-                    <div class="option">
-                        <a class="option_a" href="#hot"><h3>Hot Drinks</h3></a>
-                    </div>
-                    <div class="option">
-                        <a class="option_a" href="#snack"><h3>Snacks</h3></a>
-                    </div>
+                    <a class="option_a" href="#juices">
+                        <div class="option">
+                            <h3>Juices</h3>
+                        </div>
+                    </a>
+
+                    <a class="option_a" href="#hot">
+                        <div class="option">
+                            <h3>Hot Drinks</h3>
+                        </div>
+                    </a>
+                    
+                    <a class="option_a" href="#snack">
+                        <div class="option">
+                            <h3>Snacks</h3>
+                        </div>
+                    </a>
+                    
                 </div>
     
                 <div class="head">
