--- a/myapp/restaurent/templates/restaurent/layout1.html
+++ b/myapp/restaurent/templates/restaurent/layout1.html
@@ -3,6 +3,8 @@
 <html>
     <head>
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width", inital-scale=1.0, shrink-to-fit=no">
         <title>Rishabs App</title>
     </head>
     <body>
