--- a/myapp/restaurent/templates/restaurent/order_details.html
+++ b/myapp/restaurent/templates/restaurent/order_details.html
@@ -2,24 +2,58 @@
 {% block content %}
 <div class="order-details">
     <h1>ORDER DETAILS</h1>
-    <table class="styled-table">
-        <thead>
-            <th>Item</th>
-            <th>Price</th>
-        </thead>
-        <tbody>
-            {% for item in items %}
-            <tr>
-                <td>{{ item.name }}</td>
-                <td>&#x20b9; {{ item.price }}</td>
-            </tr>
-            {% endfor %}
-            <tr id="order-total">
-                <td>Total</td>
-                <td>&#x20b9; {{ price }}</td>
-            </tr>
-        </tbody>
-    </table>
+
+    <div class="orderid-name">
+        <div>
+            <h3>Order ID: {{order.id}}</h3>
+        </div>
+        <div>
+            <h3>Name: {{order.order_user.username}}</h3>
+        </div>
+    </div>
+
+    <div>
+        <table class="styled-table">
+            <thead>
+                <th>Item</th>
+                <th>Price</th>
+            </thead>
+            <tbody>
+                {% for item in order.items.all %}
+                <tr>
+                    <td>{{ item.name }}</td>
+                    <td>&#x20b9; {{ item.price }}</td>
+                </tr>
+                {% endfor %}
+                <tr id="order-total">
+                    <td>Total</td>
+                    <td>&#x20b9; {{ order.price }}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="order-footer">
+        <div class="order-footer-l">
+            {% if order.is_paid %}
+                <h3>&#x2705; Order has been Paid</h3>
+            {% else %}
+                <h3>&#10060; Order has not been Paid</h3>
+            {% endif %}
+        </div>
+
+        <div class="order-footer-r">
+            {% if order.is_delivered %}
+                <h3>&#x2705; Order has been Delivered</h3>
+            {% else %}
+                <form method="POST">
+                    {% csrf_token %}
+                    <button type="submit" class="nice"><h3>Mark as Delivered</h3></button>
+                </form>
+            {% endif %}
+        </div>
+    </div>    
+
 </div>
 
 {% endblock %}
