--- a/myapp/rishabs/templates/rishabs/layout2.html
+++ b/myapp/rishabs/templates/rishabs/layout2.html
@@ -3,7 +3,8 @@
 <html>
     <head>
         <link rel="stylesheet" href="{% static 'css/new.css' %}">
-        <meta name='viewport' content='width=device-width, initial-scale=1'>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width", inital-scale=1.0, shrink-to-fit=no">
         <title>Rishabs App</title>
     </head>
     <body>
