--- a/myapp/rishabs/templates/rishabs/order_confirmation.html
+++ b/myapp/rishabs/templates/rishabs/order_confirmation.html
@@ -4,7 +4,7 @@
     <div>
         <div>
             <h1>Order Submitted!</h1>
-            <p>You should receive a confirmation email soon.</p>
+            <p>You should receive the invoice email soon.</p>
             <a href="{% url 'order' %}">Return to menu</a>
         </div>
     </div>
