--- a/myapp/restaurent/templates/restaurent/dashboard.html
+++ b/myapp/restaurent/templates/restaurent/dashboard.html
@@ -109,8 +109,14 @@
                 </tbody>
             </table>
         </div>
-    
-</div>
+    </div>
+
+    <script>
+        function autoRefresh() {
+            window.location = window.location.href;
+        }
+        setInterval('autoRefresh()', 6000);
+    </script>
 
 
 
