--- a/myapp/rishabs/templates/rishabs/login.html
+++ b/myapp/rishabs/templates/rishabs/login.html
@@ -2,7 +2,6 @@
 {% block content %}
     <div>
         <h1>RISHAB'S APP</h1>
-        <h3>Please login to continue </h3>
     </div>
     <div class="forms">
         <form action="{% url 'login_view' %}" method="POST">
@@ -17,7 +16,11 @@
 
             <div>
                 <button class="button1" type="submit">LOGIN</button>
-                <a href="{% url 'register_view' %}">Don't have an account?</a>
+            </div>
+
+            <div class="acc">
+                <p>Don't have an account?<a href="{% url 'register_view' %}"> Register here</a></p>
+                
             </div>
 
         </form>
