--- a/myapp/rishabs/templates/rishabs/order.html
+++ b/myapp/rishabs/templates/rishabs/order.html
@@ -8,7 +8,7 @@
             <div class="main-body">
                 <div class="header">
                     <div class="menu">
-                        <h1>MENU</h1>
+                        <h1>Menu</h1>
                     </div>
 
                     <div class="name">
@@ -21,19 +21,19 @@
                 <div class="options">
                     <a class="option_a" href="#juices">
                         <div class="option">
-                            <h3>Juices</h3>
+                            <p>Juices</p>
                         </div>
                     </a>
 
                     <a class="option_a" href="#hot">
                         <div class="option">
-                            <h3>Hot Drinks</h3>
+                            <p>Hot Drinks</p>
                         </div>
                     </a>
                     
                     <a class="option_a" href="#snack">
                         <div class="option">
-                            <h3>Snacks</h3>
+                            <p>Snacks</p>
                         </div>
                     </a>
                     
