--- a/myapp/rishabs/static/css/new.css
+++ b/myapp/rishabs/static/css/new.css
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
+*{
+    font-family: "Inter";
+}
 body{
     margin: 0px;
+    background-color: #e4f1f1;
 }
 
 .main-body{
@@ -8,7 +13,7 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-image: linear-gradient(rgb(80, 78, 78),white);
+    background-image: #e4f1f1;
     padding-bottom: 20px;
     text-align: center;
 }
@@ -21,7 +26,7 @@ body{
 }
 
 .navbar1{
-    background-color:#333;
+    background-color:#152D35;
     align-self:stretch;
 }
 
@@ -47,7 +52,7 @@ li a {
 }
 
 li a:hover {
-background-color: #111;
+    text-decoration: underline;
 }
 
 .header {
@@ -71,30 +76,36 @@ background-color: #111;
 
 .options{
     display: flex;
-    flex: 1fr 1fr 1fr;
-    gap:10px;
-    justify-content: space-around;
+    justify-content: space-evenly;
+
+}
+
+.options > a{
+    background-color: #e4f1f1;
 }
 
 .option{
-    background-color: #d9d9d9;
+    background-color: #152D35;
     border-radius: 5px;
-    padding: 2rem;
-    width: 10rem;
-    box-shadow: 5px 5px 7px black;
-    transition: all 0.6s;
+    padding-inline: 2rem;
+    padding-block: 1rem;
+    transition: all 0.3s;
+    color: white;
 }
 
 .option:hover{
-    background-color:#4f5b50;
+    background-color:#e4f1f1;
+    color: black;
+    box-shadow: 7px 7px 10px #152D35;
+    border: 2px solid #152D35;
 }
 
 .head-name
 {
     text-align: left;
     margin-top: 30px;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-bottom: 13px;
+    margin-inline: 20px;
     font-size: 2em;
     border-bottom: 1px solid;
 }
@@ -108,16 +119,18 @@ background-color: #111;
     display: flex;
     font-size: 1.2rem;
     justify-content: space-between;
-    background-color: #d9d9d9;
-    box-shadow: 5px 5px 7px black;
+    background-color: #345B63;
     margin-bottom: 12px;
     border-radius: 8px;
-    transition: all 0.6s;
+    transition: 0.3s;
+    color: white;
 }
 
 .items:hover{
-    background-color:#8d8d8d;
-    box-shadow: 5px 5px 7px rgb(97, 97, 97);
+    background-color:#e4f1f1;
+    color: black;
+    box-shadow: 10px 10px 10px #152D35;
+    border: 2px solid #152D35;
 }
 
 .i-name{
@@ -145,18 +158,23 @@ background-color: #111;
 }
 
 .button2{
-    width: 50%;
+    width: 80%;
     padding: 0.5rem;
+    padding-block: 1.3rem;
     border-radius: 5px;
-    background-color: #212121;
+    background-color: #112031;
     color: white;
+    border: 1px solid #dcdcdc;
+    margin-top: -10px;
 }
 
 .button2:hover{
     cursor: pointer;
-    background-color: white;
-    color:#212121;
-    transition: 1s;
+    background-color:#e4f1f1;
+    color: black;
+    box-shadow: 10px 10px 10px #152D35;
+    border: 3px solid #112031;
+    transition: 0.3s;
 }
 
 .option_a{
