--- a/myapp/rishabs/static/css/style.css
+++ b/myapp/rishabs/static/css/style.css
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
+*{
+    font-family: "Inter";
+}
 body{
     margin: 0px;
+    background-color: #e4f1f1;
 }
 
 .main-body{
@@ -9,7 +14,6 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-image: linear-gradient(rgb(80, 78, 78),white);
     padding-bottom: 20px;
     text-align: center;
 }
@@ -27,7 +31,7 @@ h3{
 }
 
 .navbar1{
-    background-color:#333;
+    background-color:#152D35;
     align-self:stretch;
 }
 
@@ -53,7 +57,7 @@ li a {
   }
 
 li a:hover {
-background-color: #111;
+text-decoration: underline;
 }
 
 .photo1{
@@ -66,8 +70,9 @@ background-color: #111;
     width: 100%;
 }
 
-.forms > form {
 
+.forms > form {
+    
     display: flex;
     flex-direction: column;
 }
@@ -80,77 +85,87 @@ form>button{
 {
     width: 228px;
     height: 25px;
-    padding: 5px;
+    padding: 10px;
     margin-top: 10px;
-    border: 1px solid ;
+    border: 1px solid #dcdcdc;
     border-radius: 4px;
+    padding-inline: 1rem;
+    padding-block: 0.5rem;
 }
 
 .button1
 {
-    margin-top: 20px;
-    height: 30px;
-    width: 63px;
+    margin-top: 10px;
+    width: 100%;
+    padding-block: 0.8rem;
     border-radius: 5px;
-    background-color: #212121;
+    background-color: #112031;
     color: white;
+    border: 1px solid #dcdcdc;
 }
 
 .button2{
-    width: 100%;
+    width: 80%;
     padding: 0.5rem;
+    padding-block: 1rem;
     border-radius: 5px;
-    background-color: #212121;
+    background-color: #112031;
     color: white;
+    border: 1px solid #dcdcdc;
 }
 
 .button2:hover{
     cursor: pointer;
-    background-color: white;
-    color:#212121;
-    transition: 1s;
+    background-color: #345B63;
+    color:white;
+    transition: 0.3s;
 }
 
 
 
 .button1:hover{
     cursor: pointer;
-    background-color: white;
-    color:#212121;
-    transition: 1s;
-}
- 
-.holder{
-    background-color: rgba(21, 78, 37, 0.19);
-    padding: 1rem;
-    width: 25rem;
-    margin-top: 0.7rem;
-    border-radius: 1.5rem;
+    background-color: #345B63;
+    color:white;
+    transition: 0.3s;
 }
 
 .new-ui{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.2);
-    padding: 3rem;
+    padding: 2.5rem;
     border-radius: 1.5rem;
     margin-top: 3rem;
+    background-image: linear-gradient(#345B63 15%,white);
+    width:60%;
 }
-
-.holder-head{
-    border-bottom: 1px solid;
+ 
+.holder{
+    background-color: #e4f1f1;
+    padding: 1rem;
+    width: 80%;
+    margin-top: 0.7rem;
+    border-radius: 1.5rem;
 }
 
 .holder-contents{
-    display: flex;
-    flex-direction: column;
+    width: 100%;
+    overflow-x: auto;
+}
 
+.holder-head{
+    padding-block:1rem;
+    padding-inline: 1rem;
+    margin-inline: 1rem;
+    box-shadow: 10px 10px 10px #152D35;
+    background-color: #152D35;
+    color: white;
 }
 
 .holder-contents > h2 {
     margin: 0.5rem;
-    align-items: left;
+    align-self: left;
 }
 
 .holder-items{
@@ -163,4 +178,8 @@ form>button{
 
 .fix-ls{
     margin-right: 5rem;
+}
+
+.acc{
+    margin-top: 7px;
 }
