--- a/myapp/restaurent/templates/restaurent/profile.html
+++ b/myapp/restaurent/templates/restaurent/profile.html
@@ -7,28 +7,28 @@
         <div class="holder-contents">
             <div class="holder-items">
                 <div>
-                    <h2 class="fix-l">Username:</h2>
+                    <p >Username:</p>
                 </div>
                 <div>
-                    <h2>{{ user.username }}</h2>
-                </div>
-            </div>
-
-            <div class="holder-items">
-                <div>
-                    <h2 class="fix-ls">Mail:</h2>
-                </div>
-                <div>
-                    <h2>{{ user.email }}</h2>
+                    <p>{{ user.username }}</p>
                 </div>
             </div>
 
             <div class="holder-items">
                 <div>
-                    <h2 class="fix-l">Phone No:</h2>
+                    <p >Mail:</p>
                 </div>
                 <div>
-                    <h2>{{ user.phone_number }}</h2>
+                    <p>{{ user.email }}</p>
+                </div>
+            </div>
+
+            <div class="holder-items">
+                <div>
+                    <p >Phone No:</p>
+                </div>
+                <div>
+                    <p>{{ user.phone_number }}</p>
                 </div>
             </div>
             
