--- a/myapp/rishabs/static/css/style.css
+++ b/myapp/rishabs/static/css/style.css
@@ -5,6 +5,10 @@
 body{
     margin: 0px;
     background-color: #e4f1f1;
+    background-image: url('../images/bg-pattern1.png');
+    background-size: cover;
+    background-repeat: none;
+    
 }
 
 .main-body{
@@ -16,18 +20,21 @@ body{
     justify-content: center;
     padding-bottom: 20px;
     text-align: center;
+    background-color: #e4f1f1;
+    background-image: url('../images/bg-pattern1.png');
+    background-size: cover;
+    background-repeat: none;
 }
 
-h3{
-    color: rgb(68, 68, 68);
-}
 
 .error{
     color: black;
     background-color: rgb(255, 138, 138);
-    width: 90%;
-    padding: 1rem;
-    border-radius: 10px;
+    width: 80%;
+    border-radius: 4px;
+    padding-inline: 1rem;
+    padding-block: 0.8rem;
+    margin-left: 0.8rem;
 }
 
 .navbar1{
@@ -41,7 +48,6 @@ h3{
     display: flex;
     margin: 0;
     padding: 0; 
-  
 }
 
 li{
@@ -54,7 +60,7 @@ li a {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-  }
+}
 
 li a:hover {
 text-decoration: underline;
@@ -63,7 +69,6 @@ text-decoration: underline;
 .photo1{
     padding-top: 2rem;
     width:15rem;
-    height: 10;
 }
 
 .photo1 > img{
@@ -71,37 +76,34 @@ text-decoration: underline;
 }
 
 
-.forms > form {
-    
-    display: flex;
-    flex-direction: column;
-}
-
-form>button{
-    align-self: center;
-}
 
 .name1
 {
-    width: 228px;
-    height: 25px;
-    padding: 10px;
-    margin-top: 10px;
+    width: 80%;
+    margin-bottom: 10px;
     border: 1px solid #dcdcdc;
     border-radius: 4px;
     padding-inline: 1rem;
-    padding-block: 0.5rem;
+    padding-block: 0.8rem;
 }
 
 .button1
 {
-    margin-top: 10px;
-    width: 100%;
+    width: 90.5%;
     padding-block: 0.8rem;
-    border-radius: 5px;
+    padding-inline: 1rem;
+    border-radius: 4px;
     background-color: #112031;
     color: white;
-    border: 1px solid #dcdcdc;
+    border: none;
+
+}
+
+.button1:hover{
+    cursor: pointer;
+    background-color: #345B63;
+    color:white;
+    transition: 0.3s;
 }
 
 .button2{
@@ -111,19 +113,10 @@ form>button{
     border-radius: 5px;
     background-color: #112031;
     color: white;
-    border: 1px solid #dcdcdc;
+    border: none;
 }
 
 .button2:hover{
-    cursor: pointer;
-    background-color: #345B63;
-    color:white;
-    transition: 0.3s;
-}
-
-
-
-.button1:hover{
     cursor: pointer;
     background-color: #345B63;
     color:white;
@@ -137,49 +130,58 @@ form>button{
     padding: 2.5rem;
     border-radius: 1.5rem;
     margin-top: 3rem;
-    background-image: linear-gradient(#345B63 15%,white);
+    background-image: linear-gradient(to left top, #d4ecdd, #b3d0c4, #93b4ac, #759995, #587e7f, #496e72, #3a5e64, #2c4f57, #26464e, #203e46, #1b353d, #152d35);
     width:60%;
 }
  
 .holder{
     background-color: #e4f1f1;
-    padding: 1rem;
+    padding: 1.5rem;
     width: 80%;
-    margin-top: 0.7rem;
-    border-radius: 1.5rem;
+    margin-top: 1rem;
+    border-radius: 1em;
 }
 
 .holder-contents{
     width: 100%;
-    overflow-x: auto;
+    overflow-wrap: break-word;
 }
 
 .holder-head{
     padding-block:1rem;
     padding-inline: 1rem;
     margin-inline: 1rem;
-    box-shadow: 10px 10px 10px #152D35;
+    box-shadow: 5px 5px 10px #152D35;
     background-color: #152D35;
     color: white;
+    margin-bottom: 10px;
+    border-radius: 0.5rem;
 }
 
-.holder-contents > h2 {
-    margin: 0.5rem;
-    align-self: left;
-}
 
 .holder-items{
     display: flex;
+    justify-content: space-between;
+    margin-top: 0.5rem;
 }
 
-.fix-l{
-    margin-right: 1.5rem;
+.order-button{
+    padding-block: 1.5rem;
+    padding-inline: 0.8rem;
+    border-radius: 5px;
+    background-color: #112031;
+    color: white;
+    border: none;
 }
 
-.fix-ls{
-    margin-right: 5rem;
+.order-s{
+    text-decoration: none;
+    color: white;
 }
 
-.acc{
-    margin-top: 7px;
+.order-button:hover{
+    cursor: pointer;
+    background-color: #345B63;
+    color:white;
+    transition: 0.3s;
 }
