--- a/myapp/rishabs/templates/rishabs/layout1.html
+++ b/myapp/rishabs/templates/rishabs/layout1.html
@@ -4,7 +4,7 @@
     <head>
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width", inital-scale=1.0, shrink-to-fit=no">
+        <link rel="icon" href="static/images/favicon.ico">
         <title>Rishabs App</title>
     </head>
     <body>
