--- a/myapp/rishabs/templates/rishabs/layout2.html
+++ b/myapp/rishabs/templates/rishabs/layout2.html
@@ -3,8 +3,9 @@
 <html>
     <head>
         <link rel="stylesheet" href="{% static 'css/new.css' %}">
+        <link rel="stylesheet" href="{% static 'css/rdash.css' %}">
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width", inital-scale=1.0, shrink-to-fit=no">
+        <link rel="icon" href="static/images/favicon.ico">
         <title>Rishabs App</title>
     </head>
     <body>
