added new staff

--- a/myapp/myapp/restaurent/templates/restaurent/layout3.html
+++ b/myapp/myapp/restaurent/templates/restaurent/layout3.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="{% static 'css/dash.css' %}">
+        <link rel="icon" href="static/images/favicon.ico">
         <meta charset="UTF-8">
         <title>Rishabs App</title>
     </head>
