--- a/myapp/myapp/restaurent/templates/restaurent/email_template.html
+++ b/myapp/myapp/restaurent/templates/restaurent/email_template.html
@@ -2,9 +2,9 @@ Hey {{ username }}!
 
 Just wanted to thank you for your recent purchase!
 --------------------------------------------------
-{% for item in items %}
+{% for item in items.all %}
     {{ item.name }} - {{ item.price }}
 {% endfor %}
-    Total: {{ price }}
+    Total: Rs {{ price }}
 --------------------------------------------------
 Please visit us again :)
